# platform.upstream.libsoup

./: Makefile.am  Makefile.in  autogen.sh  configure  configure.ac  project.config
docs/: Makefile.in
docs/reference/: Makefile.am  Makefile.in  libsoup-2.4-sections.txt
docs/reference/html/: SoupAddress.html  SoupAuth.html  SoupAuthDomainDigest.html  SoupCache.html  SoupContentDecoder.html  SoupContentSniffer.html  SoupCookie.html  SoupCookieJar.html  SoupCookieJarSqlite.html  SoupCookieJarText.html  SoupLogger.html  SoupMessage.html  SoupMessageBody.html  SoupMessageHeaders.html  SoupMultipart.html  SoupMultipartInputStream.html  SoupProxyResolverDefault.html  SoupProxyURIResolver.html  SoupRequest.html  SoupRequestData.html  SoupRequestFile.html  SoupRequestHTTP.html  SoupRequester.html  SoupServer.html  SoupSession.html  SoupSessionAsync.html  SoupSessionFeature.html  SoupSessionSync.html  SoupSocket.html  SoupURI.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  ch07.html  index.html  index.sgml  ix01.html  (+9 more)
docs/reference/tmpl/: soup-address.sgml  soup-message.sgml  soup-multipart-input-stream.sgml  soup-socket.sgml  soup-version.sgml
libsoup/: Makefile.am  Makefile.in  TIZEN.h  libsoup-2.4.sym  libsoup-gnome-2.4.sym  soup-address.c  soup-auth-manager.c  soup-cache.c  soup-connection.c  soup-connection.h  soup-content-sniffer.c  soup-cookie-jar-text.c  soup-cookie-jar.c  soup-date.c  soup-form.c  soup-message-io.c  soup-message-private.h  soup-message.c  soup-message.h  soup-request-data.c  soup-session-private.h  soup-session.c  soup-session.h  soup-socket.c
packaging/: baselibs.conf  libsoup.changes  libsoup.spec
tests/: Makefile.in
